--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "del-cli": "^5.0.0",
         "esbuild": "^0.21.4",
         "npm-run-all": "^4.1.5",
+        "nunjucks-date-filter": "^0.1.1",
         "sass": "^1.77.4"
     }
 }
