feat: Update styles and content for improved design and functionality
- Changed logo URL in config to a new image.
- Enhanced hover effect on hero section images with updated filter properties.
- Added border styles to navigation for better visibility in both light and dark modes.
- Adjusted layout properties in local.css for better responsiveness and spacing.
- Updated root.css to include a new accent color variable.
- Modified blog and project page metadata for improved SEO and navigation.
- Renamed project title for clarity in content.

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,8 +3,7 @@ backend:
     branch: main
 
 local_backend: true
-# change url to a link to the image you want to use, no file paths, must be a URL
-logo_url: https://codestitch.app/frontend/images/logo.png
+logo_url: https://alan-huynh.is-a.dev/assets/images/Logo.jpeg
 
 media_folder: "src/assets/images/blog"
 public_folder: "/assets/images/blog"
