--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build:eleventy": "cross-env ELEVENTY_ENV=PROD eleventy",
         "watch:cms": "npx decap-server",
         "start": "del-cli ./public --force && npm-run-all --parallel watch:*",
-        "build": "npm ci && run-s build:*"
+        "build": "npm cache clean --force && npm ci && run-s build:*"
     },
     "engines": {
         "node": ">=16.0.0",
@@ -39,5 +39,11 @@
         "npm-run-all": "^4.1.5",
         "nunjucks-date-filter": "^0.1.1",
         "sass": "^1.77.4"
+    },
+    "resolutions": {
+        "@dabh/diagnostics": "2.0.3"
+    },
+    "overrides": {
+        "@dabh/diagnostics": "2.0.3"
     }
 }
